 Dec 23/2007
=======================
+ some code cleanup in preparation to use sqlite for the games list

 Dec 20/2007
=======================
+ added a 'rotate' option for controlling the orientation of the interface
+ any 'skin' verbiage has been changed to 'theme'
+ fixed possible memory leak in config file resolving function

 Nov 27/2007
=======================
+ use stat in layout class to test if a file exists
+ added support for relative paths in theme files

 Nov 26/2007
=======================
+ auto-sort root menu
+ fixed list item being drawn below bottom bounds

 Nov 21/2007
=======================
+ added menu sorting in alphabetic order (enabled by default)
+ removed the double mapping of controls for certain functions
+ added alphabetic page up/down control
+ changed around key mapping option names to reflect their logical use

 Nov 10/2007
=======================
+ added option for setting skin file path
+ fixed bug in menu class (garbage in selected index)
+ appended .sample to all sample conf files
+ set some reasonable defaults for skin/layout
+ fixed missing %r in default mame option
+ removed exception throw when snap option is missing %r (warn instead)

 Nov 09/2007
=======================
+ finished implementing layout class
+ removed ui related options from lemonlauncher.conf
+ removed page_size option since it can be calculated
+ added text justification option for list items

 Nov 08/2007
=======================
+ separated menu elements (item/menu/game) into their own header files
+ new layout class to handle rendering of the interface

 Nov 04/2007
=======================
+ removed "params" option (not needed, see below)
+ renamed "path" option to "mame"
+ renamed "snaps" option to "snap"
+ "mame" and "snap" path options must contain the '%r' specifier which will
  be replaced with the short rom name.  this removes the need for the params
  option since the "mame" path can contain command line switches.
+ dissable sdl mouse cursor